# the-modern-cpp-challenge

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  format.sh
ch1/: CMakeLists.txt
ch1/problem1/: CMakeLists.txt  main.cpp  sum_of_naturals_divisible_by_3_and_5.cpp  sum_of_naturals_divisible_by_3_and_5.h  test.cpp
ch1/problem10/: CMakeLists.txt  gray_code.cpp  gray_code.h  main.cpp  test.cpp
ch1/problem11/: CMakeLists.txt  converting_numerical_values_to_roman.cpp  converting_numerical_values_to_roman.h  main.cpp  test.cpp
ch1/problem12/: CMakeLists.txt  largest_collatz_sequence.cpp  largest_collatz_sequence.h  main.cpp  test.cpp
ch1/problem13/: CMakeLists.txt  computing_the_value_of_pi.cpp  computing_the_value_of_pi.h  main.cpp  test.cpp
ch1/problem14/: CMakeLists.txt  main.cpp  test.cpp  validating_isbns.cpp  validating_isbns.h
ch1/problem2/: CMakeLists.txt  greatest_common_divisor.cpp  greatest_common_divisor.h  main.cpp  test.cpp
ch1/problem3/: CMakeLists.txt  least_common_multiple.cpp  least_common_multiple.h  main.cpp  test.cpp
ch1/problem4/: CMakeLists.txt  largest_prime_smaller_than_given_number.cpp  largest_prime_smaller_than_given_number.h  main.cpp  test.cpp
ch1/problem5/: CMakeLists.txt  main.cpp  sexy_prime_pairs.cpp  sexy_prime_pairs.h  test.cpp
ch1/problem6/: CMakeLists.txt  abundant_numbers.cpp  abundant_numbers.h  main.cpp  test.cpp
ch1/problem7/: CMakeLists.txt  amicable_numbers.cpp  amicable_numbers.h  main.cpp  test.cpp
ch1/problem8/: CMakeLists.txt  armstrong_numbers.cpp  armstrong_numbers.h  main.cpp  test.cpp
ch1/problem9/: CMakeLists.txt  main.cpp  prime_factors_of_a_number.cpp  prime_factors_of_a_number.h  test.cpp
